--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,9 @@ footer {
     text-align: right;
     padding: 20px 50px;
 }
+
+.gallery img{
+    width: 100%;
+    max-width: 350px;
+    height: 300px;
+}
