--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,10 @@ footer {
     padding: 20px 50px;
 }
 
+.gallery {
+    display: flex;
+}
+
 .gallery img{
     width: 100%;
     max-width: 350px;
