Change selectors to proper type and added flex wrap and justify content

--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,14 @@ footer {
     padding: 20px 50px;
 }
 
-.gallery {
+#gallery {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.gallery img{
+#gallery img{
     width: 100%;
     max-width: 350px;
     height: 300px;
