--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ footer {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 #gallery img{
